--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,95 @@
+/* body main */
+
 .App {
   text-align: center;
+  /* margin-top: -20px; */
+  width: 100vw;
+  /* height: auto; */
+  background-color: #F1F1F1;
+  /* background-color: aqua; */
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+/* header */
+
+.header{
+  display: flex;
+  height : 200px;
+  width: 80%;
+  margin: 0px auto;
+  background-color: white;
+  flex-direction: column;
+  justify-content: flex-end;
+  margin-bottom: 20px;
+}
+/* ligne navigation */
+.navLink{
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  height: 20%;
+  width: 100%;
+  background-color: #333333;
+}
+/* les liens dans la barre */
+.navLink .links a{
+  margin-left : 50px;
+  color: white;
+  text-decoration: none;
+}
+/* l'enfant a direct donc celui esseulé */
+.navLink > a{
+  margin-right : 50px;
+  color: white;
+  text-decoration: none;
+}
+.allContent{
+  width: 80%;
+  display: flex;
+  margin: 0 auto;
+  justify-content: space-between;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.content{
   display: flex;
   flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  width: calc(75% - 25px);
 }
 
-.App-link {
-  color: #61dafb;
+.mainContent{
+  background-color: white;
+  margin-bottom: 30px;
+  padding: 15px 15px;
+  text-align: left;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.mainContent #pic{
+  width: 100%;
+  height: 200px;
+  object-fit: cover;
+}
+
+.sideContent{
+  padding: 15px 15px;
+  height : 300px;
+  width: calc(25% - 25px);
+  background-color: white;
+  text-align: left;
+}
+.sideContent #pic{
+  width: calc(100% - 15px);
+}
+
+.footer{
+  display: flex;
+  background-color: rgb(162, 154, 154);
+  height: 40px;
+  width: 80%;
+  margin: auto auto;
+  /* justify-content: flex-end; */
+}
+.footer p{
+  margin:auto auto;
+}
+.footer span{
+  font-weight: bold;
 }
